# seafile-server

./: .gitignore  .travis.yml  LICENSE.txt  Makefile.am  README.markdown  README.testing.md  autogen.sh  configure.ac  pytest.ini  run_tests.sh
.github/: dependabot.yml
.github/linters/: .golangci.yml
.github/workflows/: ci.yml  go.yml  golangci-lint.yml
ci/: install-deps.sh  requirements.txt  run.py  serverctl.py  utils.py
common/: Makefile.am  block-backend-fs.c  block-backend.h  block-mgr.c  block-mgr.h  block-tx-utils.c  block.h  branch-mgr.c  branch-mgr.h  commit-mgr.c  commit-mgr.h  common.h  config-mgr.c  config-mgr.h  diff-simple.c  diff-simple.h  fs-mgr.c  fs-mgr.h  group-mgr.c  group-mgr.h  log.c  log.h  merge-new.c  merge-new.h  mq-mgr.c  mq-mgr.h  obj-backend-fs.c  obj-backend.h  obj-cache.c  obj-cache.h  obj-store.c  obj-store.h  option.h  org-mgr.c  org-mgr.h  password-hash.c  password-hash.h  redis-cache.c  redis-cache.h  rpc-service.c  (+8 more)
common/cdc/: cdc.c  cdc.h
common/db-wrapper/: Makefile.am  db-wrapper.c  db-wrapper.h  mysql-db-ops.c  mysql-db-ops.h  pgsql-db-ops.c  pgsql-db-ops.h  sqlite-db-ops.c  sqlite-db-ops.h
controller/: Makefile.am  seafile-controller.c  seafile-controller.h
doc/: Makefile.am
fileserver/: .golangci.yml  crypt.go  diff.go  diff_simple.go  diff_test.go  fileop.go  fileserver.go  fileserver_dm.go  go.mod  go.sum  headcommit.go  http_code.go  merge.go  merge_new.go  merge_test.go  permission.go  quota.go  size_sched.go  size_sched_test.go  sync_api.go  virtual_repo.go  virtual_repo_test.go
fileserver/blockmgr/: blockmgr.go  blockmgr_test.go
fileserver/commitmgr/: commitmgr.go  commitmgr_test.go  null.go
fileserver/diff/: diff.go  diff_test.go
fileserver/fsmgr/: fsmgr.go  fsmgr_c.go  fsmgr_test.go
fileserver/metrics/: metrics.go
fileserver/objstore/: backend_fs.go  objstore.go  objstore_test.go
fileserver/option/: option.go
fileserver/repomgr/: repomgr.go  repomgr_test.go
fileserver/searpc/: searpc.go  searpc_test.go
fileserver/share/: share.go
fileserver/share/group/: group.go  group_test.go
fileserver/share/public/: public.go
fileserver/utils/: db.go  dup2.go  dup3.go  http.go  utils.go
fileserver/workerpool/: workerpool.go
fuse/: Makefile.am  file.c  getattr.c  readdir.c  repo-mgr.c  seaf-fuse.c  seafile-session.c  seafile-session.h
include/: Makefile.am  seafile-error.h  seafile-rpc.h
integration-tests/: install-deps.sh  requirements.txt  run.py
lib/: Makefile.am  ccnetobj.vala  cevent.c  cevent.h  commit.vala  copy-task.vala  dir.vala  include.h  job-mgr.c  job-mgr.h  libccnet_utils.c  libccnet_utils.h  net.c  repo.vala  rpc_table.py  seafile-rpc-wrapper.c  seahub.vala  search-result.vala  timer.c  timer.h  utils.c  utils.h  webaccess.vala
notification-server/: .golangci.yml  ccnet.conf  client.go  dup2.go  dup3.go  event.go  go.mod  go.sum  logger.go  notification.conf  server.go  subscriptions.go
python/seafile/: __init__.py  rpcclient.py
python/seaserv/: __init__.py  api.py  service.py
scripts/: Makefile.am  breakpad.py  check_init_admin.py  export-users.sh  migrate-to-ceph.sh  parse_seahub_db.py  reset-admin.sh  seaf-fsck.sh  seaf-fuse.sh  seaf-gc.sh  seafile.sh  seafobj_migrate.py  seahub.conf  seahub.sh  setup-seafile-mysql.py  setup-seafile-mysql.sh  setup-seafile.sh  sqlite2mysql.py  sqlite2mysql.sh
scripts/docs-upgrade/: db_update_helper.py  upgrade_1.0_1.1.sh  upgrade_1.1_1.2.sh
scripts/docs-upgrade/sql/1.1.0/mysql/: seahub.sql
scripts/docs-upgrade/sql/1.2.0/mysql/: seafile.sql  seahub.sql
scripts/sql/mysql/: ccnet.sql  seafile.sql
scripts/sql/pgsql/: ccnet.sql  seafile.sql
scripts/sql/sqlite/: config.sql  groupmgr.sql  org.sql  seafile.sql  user.sql
scripts/upgrade/: db_update_helper.py  fix_mysql_user.py  minor-upgrade.sh  regenerate_secret_key.sh  upgrade_1.5_1.6.sh  upgrade_5.0_5.1.sh  upgrade_6.2_6.3.sh  upgrade_7.0_7.1.sh  upgrade_8.0_9.0.sh
scripts/upgrade/sql/6.1.0/mysql/: update.sql
scripts/upgrade/sql/6.1.0/sqlite3/: update.sql
scripts/upgrade/sql/6.3.0/mysql/: ccnet.sql  seafile.sql  seahub.sql
scripts/upgrade/sql/6.3.0/sqlite3/: seahub.sql
server/: Makefile.am  access-file.c  access-file.h  block-tx-server.c  change-set.c  change-set.h  copy-mgr.c  copy-mgr.h  fileserver-config.c  fileserver-config.h  group-mgr.c  http-server.c  http-server.h  http-status-codes.h  http-tx-mgr.c  http-tx-mgr.h  index-blocks-mgr.c  index-blocks-mgr.h  listen-mgr.c  listen-mgr.h  metric-mgr.c  metric-mgr.h  notif-mgr.c  notif-mgr.h  org-mgr.c  pack-dir.c  pack-dir.h  passwd-mgr.c  permission-mgr.c  quota-mgr.c  quota-mgr.h  repo-mgr.c  repo-mgr.h  repo-op.c  repo-perm.c  seaf-server.c  seafile-session.c  seafile-session.h  share-mgr.c  share-mgr.h  (+11 more)
server/gc/: Makefile.am  fsck.c  fsck.h  gc-core.c  gc-core.h  repo-mgr.c  repo-mgr.h  seaf-fsck.c  seaf-migrate.c  seafile-session.c  seafile-session.h  seafserv-gc.c  verify.c
server/processors/: check-tx-slave-v2-proc.c  putcs-v2-proc.c  recvbranch-proc.c  recvbranch-v2-proc.c
tests/: README.md  config.py  conftest.py  test_folder.py  test_groups.py  test_sharing.py  test_structure.py  test_users.py  utils.py
tests/conf/: ccnet.conf  mykey.peer  seahub_settings.py
tests/test_file_operation/: test_file_operation.py  test_merge_virtual_repo.py  test_search_files.py  test_upload_and_update.py  test_upload_large_files.py  test_zip_download.py
tests/test_file_property_and_dir_listing/: test_file_property_and_dir_listing.py
tests/test_gc/: test_gc.py
tests/test_get_repo_list/: test_get_repo_list.py
tests/test_group/: test_groups.py
tests/test_password/: test_password.py
tests/test_repo_manipulation/: test_repo_manipulation.py
tests/test_server_config/: test_server_config.py
tests/test_share_and_perm/: test_shared_repo_perm.py  test_structure_repo_perm.py
tests/test_trashed_repos/: test_trashed_repos.py
tests/test_upload/: account.conf  go.mod  go.sum  readme.md  test_upload.go
tests/test_user/: test_users.py
tools/: Makefile.am  ccnet-init.c  seaf-server-init.c  seafile-admin
(+14 files in other folders)
